# Blobfish

./: README.md
.docs/: blobfish_mvp_design.md  blobfish_mvp_ref.md  milestone_0_skeleton.md  milestone_10_erasure_coding.md  milestone_1_buckets.md  milestone_2_single_chunk_objects.md  milestone_3_chunked_objects.md  milestone_4_recovery_scrubbing.md  milestone_5_distributed_shape.md  milestone_6_multi_process_compose.md  milestone_7_replicated_writes.md  milestone_8_repair.md  milestone_9_multipart_upload.md
blobfish/: Cargo.toml  Dockerfile  dev.toml  docker-compose.yml  docker.toml  meta.redb
blobfish/crates/blobfish-api/: Cargo.toml
blobfish/crates/blobfish-api/src/: errors.rs  lib.rs  routes.rs
blobfish/crates/blobfish-api/src/buckets_handler/: handlers.rs  mod.rs
blobfish/crates/blobfish-api/src/object_handler/: handler.rs  mod.rs
blobfish/crates/blobfish-client/: Cargo.toml
blobfish/crates/blobfish-core/: Cargo.toml
blobfish/crates/blobfish-core/src/: bucket.rs  errors.rs  lib.rs  models.rs  object_service.rs  placement.rs  storage_service.rs  types.rs
blobfish/crates/blobfish-core/src/models/: bucket.rs  config.rs  mod.rs  node.rs  object.rs
blobfish/crates/blobfish-meta/: Cargo.toml
blobfish/crates/blobfish-meta/src/: lib.rs  redb_store.rs
blobfish/crates/blobfish-node/: Cargo.toml
blobfish/crates/blobfish-server/: Cargo.toml
blobfish/crates/blobfish-server/src/: main.rs
blobfish/crates/blobfish-store/: Cargo.toml
rest_tests/: down.sh  milestone0.sh  milestone1.sh  milestone2.sh  restart.sh  run.sh
