[package]
name = "blobfish-api"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { workspace = true }
blobfish-core = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
futures = "0.3.32"
uuid = { version = "1.23.1", features = ["v4"] }