[package]
name = "blobfish-core"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { workspace = true }
chrono = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true }
axum = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }