[package]
name = "blobfish-server"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "blobfish"
path = "src/main.rs"

[dependencies]
clap = { version = "4.6.1", features = ["derive"] }
toml = "1.1.2+spec-1.1.0"
blobfish-core = { workspace = true }
blobfish-api = { workspace = true }
tokio = { version = "1.52.1", features = ["rt", "rt-multi-thread", "macros"] }
anyhow = "1.0.102"
tracing = "0.1.44"
dotenvy = "0.15.7"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
axum = "0.8.9"