[package]
name = "blobfish-server"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "blobfish"
path = "src/main.rs"

[dependencies]
clap = { version = "4.6.1", features = ["derive"] }
toml = "1.1.2"
blobfish-core = { workspace = true }
blobfish-api = { workspace = true }
blobfish-meta = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
dotenvy = { workspace = true }
axum = { workspace = true }